--- a/examples/cabbage_price/regression_tabular_cabbage_price.ipynb
+++ b/examples/cabbage_price/regression_tabular_cabbage_price.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "## About the Dataset and Task\n",
     "\n",
-    "The dataset used in this notebook is on dogs images, comprising 2 classes, and all images are 28 x 28 pixels. The dataset can be downloaded from [here](https://drive.google.com/drive/folders/1W78mWACObQNgum6XCmOUoNyA0n_16MF-?usp=sharing). The task to be carried out will be a binary class prediction."
+    "The dataset used in this notebook is on cabbage price, comprising 4 predictor features, and 1 target feature. The dataset can be downloaded from [here](https://drive.google.com/drive/folders/1ljm5lmS3g-OI0rs9UcmouY6MdmvaqKlb?usp=sharing). The task to be carried out will be a regression prediction."
    ],
    "metadata": {}
   },
@@ -39,11 +39,11 @@
     "Firstly, pull the required docker images with the following commands:\n",
     "1. Synergos TTP (Basic):\n",
     "\n",
-    "`docker pull registry.aisingapore.net/fedlearn/synergos_ttp:syn0.7`\n",
+    "`docker pull synergos_ttp:v0.1.0`\n",
     "\n",
     "2. Synergos Worker:\n",
     "\n",
-    "`docker pull registry.aisingapore.net/fedlearn/synergos_worker:syn0.5`\n",
+    "`docker pull synergos_worker:v0.1.0`\n",
     "\n",
     "Next, in <u>separate</u> CLI terminals, run the following command:\n",
     "\n",
@@ -51,15 +51,15 @@
     "\n",
     "**Worker 1**\n",
     "\n",
-    "```docker run -v <directory dogs_binary_class/data1>:/worker/data -v <directory dogs_binary_class/outputs_1>:/worker/outputs --name worker_1 synergos_worker:v0.1.0 --id worker_1 --logging_variant basic```\n",
+    "```docker run -v <directory cabbage_price/data1>:/worker/data -v <directory cabbage_price/outputs_1>:/worker/outputs --name worker_1 synergos_worker:v0.1.0 --id worker_1 --logging_variant basic```\n",
     "\n",
     "**Worker 2**\n",
     "\n",
-    "```docker run -v <directory dogs_binary_class/data2>:/worker/data -v <directory dogs_binary_class/outputs_2>:/worker/outputs --name worker_2 synergos_worker:v0.1.0 --id worker_2 --logging_variant basic```\n",
+    "```docker run -v <directory cabbage_price/data2>:/worker/data -v <directory cabbage_price/outputs_2>:/worker/outputs --name worker_2 synergos_worker:v0.1.0 --id worker_2 --logging_variant basic```\n",
     "\n",
     "**TTP**\n",
     "\n",
-    "```docker run -p 0.0.0.0:5000:5000 -p 5678:5678 -p 8020:8020 -p 8080:8080 -v <directory dogs_binary_class/mlflow_test>:/ttp/mlflow -v <directory dogs_binary_class/ttp_data>:/ttp/data --name ttp --link worker_1 --link worker_2 synergos_ttp:v0.1.0 --id ttp --logging_variant basic -c```\n"
+    "```docker run -p 0.0.0.0:5000:5000 -p 5678:5678 -p 8020:8020 -p 8080:8080 -v <directory cabbage_price/mlflow_test>:/ttp/mlflow -v <directory cabbage_price/ttp_data>:/ttp/data --name ttp --link worker_1 --link worker_2 synergos_ttp:v0.1.0 --id ttp --logging_variant basic -c```\n"
    ],
    "metadata": {}
   },
@@ -116,11 +116,6 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
    "source": [
     "#### 1A. TTP creates a collaboration"
    ],
@@ -150,7 +145,7 @@
     "driver.projects.create(\n",
     "    collab_id=\"test_collaboration\",\n",
     "    project_id=\"test_project\",\n",
-    "    action=\"classify\",\n",
+    "    action=\"regress\",\n",
     "    incentives={\n",
     "        'tier_1': [],\n",
     "        'tier_2': [],\n",
@@ -177,56 +172,12 @@
     "    expt_id=\"test_experiment\",\n",
     "    model=[\n",
     "        {\n",
-    "            \"activation\": \"relu\",\n",
+    "            \"activation\": \"\",\n",
     "            \"is_input\": True,\n",
-    "            \"l_type\": \"Conv2d\",\n",
-    "            \"structure\": {\n",
-    "                \"bias\": True,\n",
-    "                \"in_channels\": 1, \n",
-    "                \"out_channels\": 3,\n",
-    "                \"kernel_size\": 5\n",
-    "            }\n",
-    "        },\n",
-    "        {\n",
-    "            \"activation\": \"\",\n",
-    "            \"is_input\": False,\n",
-    "            \"l_type\": \"MaxPool2d\",\n",
-    "            \"structure\": {\n",
-    "                \"kernel_size\": 3\n",
-    "            }\n",
-    "        },\n",
-    "        {\n",
-    "            \"activation\": \"relu\",\n",
-    "            \"is_input\": False,\n",
-    "            \"l_type\": \"Conv2d\",\n",
-    "            \"structure\": {\n",
-    "                \"bias\": True,\n",
-    "                \"in_channels\": 3, \n",
-    "                \"out_channels\": 1,\n",
-    "                \"kernel_size\": 3\n",
-    "            }\n",
-    "        },\n",
-    "        {\n",
-    "            \"activation\": \"\",\n",
-    "            \"is_input\": False,\n",
-    "            \"l_type\": \"MaxPool2d\",\n",
-    "            \"structure\": {\n",
-    "                \"kernel_size\": 3\n",
-    "            }\n",
-    "        },\n",
-    "        {\n",
-    "            \"activation\": \"relu\",\n",
-    "            \"is_input\": False,\n",
-    "            \"l_type\": \"Flatten\",\n",
-    "            \"structure\": {}\n",
-    "        },\n",
-    "        {\n",
-    "            \"activation\": \"sigmoid\",\n",
-    "            \"is_input\": False,\n",
     "            \"l_type\": \"Linear\",\n",
     "            \"structure\": {\n",
     "                \"bias\": True,\n",
-    "                \"in_features\": 4, \n",
+    "                \"in_features\": 4,\n",
     "                \"out_features\": 1 \n",
     "            }\n",
     "        }\n",
@@ -256,7 +207,7 @@
     "    epochs=1,\n",
     "    base_lr=0.0005,\n",
     "    max_lr=0.005,\n",
-    "    criterion=\"BCELoss\"\n",
+    "    criterion=\"MSELoss\"\n",
     ")"
    ],
    "outputs": [],
@@ -355,7 +306,7 @@
     "    participant_id=\"worker_1\",\n",
     "    train=[[\"train\"]],\n",
     "    evaluate=[[\"evaluate\"]],\n",
-    "    predict=[[\"predict\"]]\n",
+    "    predict = [[\"predict\"]]\n",
     ")\n",
     "\n",
     "driver.tags.create(\n",
@@ -364,7 +315,7 @@
     "    participant_id=\"worker_2\",\n",
     "    train=[[\"train\"]],\n",
     "    evaluate=[[\"evaluate\"]],\n",
-    "    predict=[[\"predict\"]]\n",
+    "    predict = [[\"predict\"]]\n",
     ")"
    ],
    "outputs": [],
@@ -373,7 +324,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Phase 2:\n",
+    "## Phase 2: \n",
     "Alignment, Training & Optimisation"
    ],
    "metadata": {}
