--- a/examples/femnist/multi_classification_image_femnist.ipynb
+++ b/examples/femnist/multi_classification_image_femnist.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "## About the Dataset and Task\n",
     "\n",
-    "The dataset used in this notebook is on dogs images, comprising 2 classes, and all images are 28 x 28 pixels. The dataset can be downloaded from [here](https://drive.google.com/drive/folders/1W78mWACObQNgum6XCmOUoNyA0n_16MF-?usp=sharing). The task to be carried out will be a binary class prediction."
+    "The dataset used in this notebook is on a small subset femnist images, comprising 3 classes, and all images are 28 x 28 pixels. The dataset can be downloaded from [here](https://drive.google.com/drive/folders/1FIfdQZHv0W7ef1ByC0fQssvSrgPMFaqL?usp=sharing). The task to be carried out will be a multi-class prediction."
    ],
    "metadata": {}
   },
@@ -51,15 +51,15 @@
     "\n",
     "**Worker 1**\n",
     "\n",
-    "```docker run -v <directory dogs_binary_class/data1>:/worker/data -v <directory dogs_binary_class/outputs_1>:/worker/outputs --name worker_1 synergos_worker:v0.1.0 --id worker_1 --logging_variant basic```\n",
+    "```docker run -v <directory femnist/data1>:/worker/data -v <directory femnist/outputs_1>:/worker/outputs --name worker_1 synergos_worker:v0.1.0 --id worker_1 --logging_variant basic```\n",
     "\n",
     "**Worker 2**\n",
     "\n",
-    "```docker run -v <directory dogs_binary_class/data2>:/worker/data -v <directory dogs_binary_class/outputs_2>:/worker/outputs --name worker_2 synergos_worker:v0.1.0 --id worker_2 --logging_variant basic```\n",
+    "```docker run -v <directory femnist/data2>:/worker/data -v <directory femnist/outputs_2>:/worker/outputs --name worker_2 synergos_worker:v0.1.0 --id worker_2 --logging_variant basic```\n",
     "\n",
     "**TTP**\n",
     "\n",
-    "```docker run -p 0.0.0.0:5000:5000 -p 5678:5678 -p 8020:8020 -p 8080:8080 -v <directory dogs_binary_class/mlflow_test>:/ttp/mlflow -v <directory dogs_binary_class/ttp_data>:/ttp/data --name ttp --link worker_1 --link worker_2 synergos_ttp:v0.1.0 --id ttp --logging_variant basic -c```\n"
+    "```docker run -p 0.0.0.0:5000:5000 -p 5678:5678 -p 8020:8020 -p 8080:8080 -v <directory femnist/mlflow_test>:/ttp/mlflow -v <directory femnist/ttp_data>:/ttp/data --name ttp --link worker_1 --link worker_2 synergos_ttp:v0.1.0 --id ttp --logging_variant basic -c```\n"
    ],
    "metadata": {}
   },
@@ -112,11 +112,6 @@
     "\n",
     "Submitting TTP & Participant metadata"
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [],
    "metadata": {}
   },
   {
@@ -181,55 +176,30 @@
     "            \"is_input\": True,\n",
     "            \"l_type\": \"Conv2d\",\n",
     "            \"structure\": {\n",
-    "                \"bias\": True,\n",
     "                \"in_channels\": 1, \n",
-    "                \"out_channels\": 3,\n",
-    "                \"kernel_size\": 5\n",
+    "                \"out_channels\": 4,\n",
+    "                \"kernel_size\": 3,\n",
+    "                \"stride\": 1,\n",
+    "                \"padding\": 1\n",
     "            }\n",
     "        },\n",
     "        {\n",
-    "            \"activation\": \"\",\n",
-    "            \"is_input\": False,\n",
-    "            \"l_type\": \"MaxPool2d\",\n",
-    "            \"structure\": {\n",
-    "                \"kernel_size\": 3\n",
-    "            }\n",
-    "        },\n",
-    "        {\n",
-    "            \"activation\": \"relu\",\n",
-    "            \"is_input\": False,\n",
-    "            \"l_type\": \"Conv2d\",\n",
-    "            \"structure\": {\n",
-    "                \"bias\": True,\n",
-    "                \"in_channels\": 3, \n",
-    "                \"out_channels\": 1,\n",
-    "                \"kernel_size\": 3\n",
-    "            }\n",
-    "        },\n",
-    "        {\n",
-    "            \"activation\": \"\",\n",
-    "            \"is_input\": False,\n",
-    "            \"l_type\": \"MaxPool2d\",\n",
-    "            \"structure\": {\n",
-    "                \"kernel_size\": 3\n",
-    "            }\n",
-    "        },\n",
-    "        {\n",
-    "            \"activation\": \"relu\",\n",
+    "            \"activation\": None,\n",
     "            \"is_input\": False,\n",
     "            \"l_type\": \"Flatten\",\n",
     "            \"structure\": {}\n",
     "        },\n",
     "        {\n",
-    "            \"activation\": \"sigmoid\",\n",
+    "            \"activation\": \"softmax\",\n",
     "            \"is_input\": False,\n",
     "            \"l_type\": \"Linear\",\n",
     "            \"structure\": {\n",
     "                \"bias\": True,\n",
-    "                \"in_features\": 4, \n",
-    "                \"out_features\": 1 \n",
+    "                \"in_features\": 4 * 28 * 28,\n",
+    "                \"out_features\": 3\n",
     "            }\n",
     "        }\n",
+    "\n",
     "    ]\n",
     ")"
    ],
@@ -373,7 +343,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Phase 2:\n",
+    "## Phase 2: \n",
     "Alignment, Training & Optimisation"
    ],
    "metadata": {}
