--- a/examples/abalone/regression_tabular_abalone.ipynb
+++ b/examples/abalone/regression_tabular_abalone.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "## About the Dataset and Task\n",
     "\n",
-    "The dataset used in this notebook is on dogs images, comprising 2 classes, and all images are 28 x 28 pixels. The dataset can be downloaded from [here](https://drive.google.com/drive/folders/1W78mWACObQNgum6XCmOUoNyA0n_16MF-?usp=sharing). The task to be carried out will be a binary class prediction."
+    "The dataset used in this notebook is on abalone age, comprising 8 predictor features, and 1 target feature. The dataset can be downloaded from [here](https://drive.google.com/drive/folders/15EpZaYr7gBYMKULZgpVTrJiDYZP0bQTv?usp=sharing). The task to be carried out will be a regression prediction."
    ],
    "metadata": {}
   },
@@ -39,11 +39,11 @@
     "Firstly, pull the required docker images with the following commands:\n",
     "1. Synergos TTP (Basic):\n",
     "\n",
-    "`docker pull registry.aisingapore.net/fedlearn/synergos_ttp:syn0.7`\n",
+    "`docker pull synergos_ttp:v0.1.0`\n",
     "\n",
     "2. Synergos Worker:\n",
     "\n",
-    "`docker pull registry.aisingapore.net/fedlearn/synergos_worker:syn0.5`\n",
+    "`docker pull synergos_worker:v0.1.0`\n",
     "\n",
     "Next, in <u>separate</u> CLI terminals, run the following command:\n",
     "\n",
@@ -51,15 +51,15 @@
     "\n",
     "**Worker 1**\n",
     "\n",
-    "```docker run -v <directory dogs_binary_class/data1>:/worker/data -v <directory dogs_binary_class/outputs_1>:/worker/outputs --name worker_1 synergos_worker:v0.1.0 --id worker_1 --logging_variant basic```\n",
+    "```docker run -v <directory abalone/data1>:/worker/data -v <directory abalone/outputs_1>:/worker/outputs --name worker_1 synergos_worker:v0.1.0 --id worker_1 --logging_variant basic```\n",
     "\n",
     "**Worker 2**\n",
     "\n",
-    "```docker run -v <directory dogs_binary_class/data2>:/worker/data -v <directory dogs_binary_class/outputs_2>:/worker/outputs --name worker_2 synergos_worker:v0.1.0 --id worker_2 --logging_variant basic```\n",
+    "```docker run -v <directory abalone/data2>:/worker/data -v <directory abalone/outputs_2>:/worker/outputs --name worker_2 synergos_worker:v0.1.0 --id worker_2 --logging_variant basic```\n",
     "\n",
     "**TTP**\n",
     "\n",
-    "```docker run -p 0.0.0.0:5000:5000 -p 5678:5678 -p 8020:8020 -p 8080:8080 -v <directory dogs_binary_class/mlflow_test>:/ttp/mlflow -v <directory dogs_binary_class/ttp_data>:/ttp/data --name ttp --link worker_1 --link worker_2 synergos_ttp:v0.1.0 --id ttp --logging_variant basic -c```\n"
+    "```docker run -p 0.0.0.0:5000:5000 -p 5678:5678 -p 8020:8020 -p 8080:8080 -v <directory abalone/mlflow_test>:/ttp/mlflow -v <directory abalone/ttp_data>:/ttp/data --name ttp --link worker_1 --link worker_2 synergos_ttp:v0.1.0 --id ttp --logging_variant basic -c```\n"
    ],
    "metadata": {}
   },
@@ -116,11 +116,6 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
    "source": [
     "#### 1A. TTP creates a collaboration"
    ],
@@ -150,7 +145,7 @@
     "driver.projects.create(\n",
     "    collab_id=\"test_collaboration\",\n",
     "    project_id=\"test_project\",\n",
-    "    action=\"classify\",\n",
+    "    action=\"regress\",\n",
     "    incentives={\n",
     "        'tier_1': [],\n",
     "        'tier_2': [],\n",
@@ -177,57 +172,13 @@
     "    expt_id=\"test_experiment\",\n",
     "    model=[\n",
     "        {\n",
-    "            \"activation\": \"relu\",\n",
+    "            \"activation\": \"\",\n",
     "            \"is_input\": True,\n",
-    "            \"l_type\": \"Conv2d\",\n",
-    "            \"structure\": {\n",
-    "                \"bias\": True,\n",
-    "                \"in_channels\": 1, \n",
-    "                \"out_channels\": 3,\n",
-    "                \"kernel_size\": 5\n",
-    "            }\n",
-    "        },\n",
-    "        {\n",
-    "            \"activation\": \"\",\n",
-    "            \"is_input\": False,\n",
-    "            \"l_type\": \"MaxPool2d\",\n",
-    "            \"structure\": {\n",
-    "                \"kernel_size\": 3\n",
-    "            }\n",
-    "        },\n",
-    "        {\n",
-    "            \"activation\": \"relu\",\n",
-    "            \"is_input\": False,\n",
-    "            \"l_type\": \"Conv2d\",\n",
-    "            \"structure\": {\n",
-    "                \"bias\": True,\n",
-    "                \"in_channels\": 3, \n",
-    "                \"out_channels\": 1,\n",
-    "                \"kernel_size\": 3\n",
-    "            }\n",
-    "        },\n",
-    "        {\n",
-    "            \"activation\": \"\",\n",
-    "            \"is_input\": False,\n",
-    "            \"l_type\": \"MaxPool2d\",\n",
-    "            \"structure\": {\n",
-    "                \"kernel_size\": 3\n",
-    "            }\n",
-    "        },\n",
-    "        {\n",
-    "            \"activation\": \"relu\",\n",
-    "            \"is_input\": False,\n",
-    "            \"l_type\": \"Flatten\",\n",
-    "            \"structure\": {}\n",
-    "        },\n",
-    "        {\n",
-    "            \"activation\": \"sigmoid\",\n",
-    "            \"is_input\": False,\n",
     "            \"l_type\": \"Linear\",\n",
     "            \"structure\": {\n",
     "                \"bias\": True,\n",
-    "                \"in_features\": 4, \n",
-    "                \"out_features\": 1 \n",
+    "                \"in_features\": 28,\n",
+    "                \"out_features\": 1\n",
     "            }\n",
     "        }\n",
     "    ]\n",
@@ -256,7 +207,7 @@
     "    epochs=1,\n",
     "    base_lr=0.0005,\n",
     "    max_lr=0.005,\n",
-    "    criterion=\"BCELoss\"\n",
+    "    criterion=\"MSELoss\"\n",
     ")"
    ],
    "outputs": [],
@@ -354,8 +305,7 @@
     "    project_id=\"test_project\",\n",
     "    participant_id=\"worker_1\",\n",
     "    train=[[\"train\"]],\n",
-    "    evaluate=[[\"evaluate\"]],\n",
-    "    predict=[[\"predict\"]]\n",
+    "    evaluate=[[\"evaluate\"]]\n",
     ")\n",
     "\n",
     "driver.tags.create(\n",
@@ -363,8 +313,7 @@
     "    project_id=\"test_project\",\n",
     "    participant_id=\"worker_2\",\n",
     "    train=[[\"train\"]],\n",
-    "    evaluate=[[\"evaluate\"]],\n",
-    "    predict=[[\"predict\"]]\n",
+    "    evaluate=[[\"evaluate\"]]\n",
     ")"
    ],
    "outputs": [],
@@ -373,7 +322,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Phase 2:\n",
+    "## Phase 2: \n",
     "Alignment, Training & Optimisation"
    ],
    "metadata": {}
@@ -389,10 +338,12 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "driver.alignments.create(collab_id='test_collaboration',\n",
-    "                         project_id=\"test_project\",\n",
-    "                         verbose=False,\n",
-    "                         log_msg=False)"
+    "driver.alignments.create(\n",
+    "    collab_id='test_collaboration',\n",
+    "    project_id=\"test_project\",\n",
+    "    verbose=False,\n",
+    "    log_msg=False\n",
+    ")"
    ],
    "outputs": [],
    "metadata": {
@@ -480,9 +431,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.10 64-bit ('synergos': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -495,6 +445,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
+  },
+  "interpreter": {
+   "hash": "588afab0bfe8a83f63f3446bec3c249dc685519d81402febab03812b476deb31"
   }
  },
  "nbformat": 4,
