update about data information

--- a/examples/heart_disease/binary_classification_tabular_heart_disease.ipynb
+++ b/examples/heart_disease/binary_classification_tabular_heart_disease.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "## About the Dataset and Task\n",
     "\n",
-    "The dataset used in this notebook is on heart disease tabular data, comprising 14 predictor features, and 1 target feature for a binary class. The dataset can be downloaded from [here](https://drive.google.com/drive/folders/15EpZaYr7gBYMKULZgpVTrJiDYZP0bQTv?usp=sharing). The task to be carried out will be a binary classifcation.\n",
+    "The dataset used in this notebook is on heart disease tabular data, comprising 14 predictor features, and 1 target feature for a binary class. The dataset is available in the same directory as this notebook. Within the dataset directory, `data1` is for Worker 1 and `data2` is for Worker 2. The task to be carried out will be a binary classifcation.\n",
     "\n",
     "The dataset we have provided is a processed subset of the [original Heart Disease dataset](https://archive.ics.uci.edu/ml/datasets/heart+disease).\n",
     "\n",
