--- a/examples/imagenette/multi_classification_image_imagenette.ipynb
+++ b/examples/imagenette/multi_classification_image_imagenette.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "## About the Dataset and Task\n",
     "\n",
-    "The dataset used in this notebook is on a small subset of Imagenette images, comprising 3 classes, and all images are 28 x 28 pixels. The dataset can be downloaded from [here](https://drive.google.com/drive/folders/1IrJa-x1qzla_vIadcFH2ckmN5TwutG4q). The task to be carried out will be a multi-classification.\n",
+    "The dataset used in this notebook is on a small subset of Imagenette images, comprising 3 classes, and all images are 28 x 28 pixels. The dataset is available in the same directory as this notebook. Within the dataset directory, `data1` is for Worker 1 and `data2` is for Worker 2. The task to be carried out will be a multi-classification.\n",
     "\n",
     "The dataset we have provided is a processed subset of the [original Imagenette dataset](https://github.com/fastai/imagenette)."
    ],
