--- a/examples/berry_flower/classification_image_berry_flower.ipynb
+++ b/examples/berry_flower/classification_image_berry_flower.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "## About the Dataset and Task\n",
     "\n",
-    "The dataset used in this notebook is on berry and flower images, comprising 2 classes, and all images are 28 x 28 pixels. The dataset can be downloaded from [here](https://drive.google.com/drive/folders/1IrJa-x1qzla_vIadcFH2ckmN5TwutG4q). The task to be carried out will be a binary classification.\n",
+    "The dataset used in this notebook is on berry and flower images, comprising 2 classes, and all images are 28 x 28 pixels. The dataset is available in the same directory as this notebook. Within the dataset directory, `data1` is for Worker 1 and `data2` is for Worker 2. The task to be carried out will be a binary classification.\n",
     "\n",
     "The dataset we have provided is a processed subset of the [original Linnaeus 5 dataset](http://chaladze.com/l5/).\n",
     "\n",
