--- a/examples/dogs/binary_classification_image_tutorial_dogs.ipynb
+++ b/examples/dogs/binary_classification_image_tutorial_dogs.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "## About the Dataset and Task\n",
     "\n",
-    "The dataset used in this notebook is on dogs images, comprising 2 classes, and all images are 28 x 28 pixels. The dataset can be downloaded from [here](https://drive.google.com/drive/folders/1W78mWACObQNgum6XCmOUoNyA0n_16MF-?usp=sharing). The task to be carried out will be a binary classification.\n",
+    "The dataset used in this notebook is on dogs images, comprising 2 classes, and all images are 28 x 28 pixels. The dataset is available in the same directory as this notebook. Within the dataset directory, `data1` is for Worker 1 and `data2` is for Worker 2. The task to be carried out will be a binary classification.\n",
     "\n",
     "The dataset we have provided is a processed subset of the [original Stanford Dogs dataset](http://vision.stanford.edu/aditya86/ImageNetDogs/).\n",
     "\n",
