--- a/examples/femnist/multi_classification_image_femnist.ipynb
+++ b/examples/femnist/multi_classification_image_femnist.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "## About the Dataset and Task\n",
     "\n",
-    "The dataset used in this notebook is on a small subset of Federated EMNIST (FEMNIST) images, comprising 3 classes, and all images are 28 x 28 pixels. The dataset can be downloaded from [here](https://drive.google.com/drive/folders/1FIfdQZHv0W7ef1ByC0fQssvSrgPMFaqL?usp=sharing). The task to be carried out will be a multi-classification.\n",
+    "The dataset used in this notebook is on a small subset of Federated EMNIST (FEMNIST) images, comprising 3 classes, and all images are 28 x 28 pixels. The dataset is available in the same directory as this notebook. Within the dataset directory, `data1` is for Worker 1 and `data2` is for Worker 2. The task to be carried out will be a multi-classification.\n",
     "\n",
     "The dataset we have provided is a processed subset of the original FEMNIST dataset retrieved from [here](https://github.com/TalwalkarLab/leaf/tree/master/data/femnist)."
    ],
