--- a/examples/leaf_textures/multi_classification_tabular_leaf_texture.ipynb
+++ b/examples/leaf_textures/multi_classification_tabular_leaf_texture.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "## About the Dataset and Task\n",
     "\n",
-    "The dataset used in this notebook is on leaf texture, comprising 64 predictor features, and 1 target feature for 16 classes. The dataset can be downloaded from [here](https://drive.google.com/drive/folders/15EpZaYr7gBYMKULZgpVTrJiDYZP0bQTv?usp=sharing). The task to be carried out will be multi-classification.\n",
+    "The dataset used in this notebook is on leaf texture, comprising 64 predictor features, and 1 target feature for 16 classes. The dataset is available in the same directory as this notebook. Within the dataset directory, `data1` is for Worker 1 and `data2` is for Worker 2. The task to be carried out will be multi-classification.\n",
     "\n",
     "The dataset we have provided is a processed subset of the [original One-hundred plant species leaves dataset](https://archive.ics.uci.edu/ml/datasets/One-hundred+plant+species+leaves+data+set).\n",
     "\n",
